package DIP.Controller.Interface;

public interface IUserService {
  String Fetch(String userId);
}
