package DIP.Service.Interface;

public interface IUserRepository {
  String FetchByUserId(String userId);
}
